Llistar files d'un issue finalitzat
